[gd_scene load_steps=3 format=3 uid="uid://cvhlgsn21ectg"]

[ext_resource type="Script" path="res://scripts/uis/login.gd" id="1_e8a18"]
[ext_resource type="PackedScene" uid="uid://dg1lbhhhwd65c" path="res://scripts/components/error_dialog.tscn" id="2_8vrmq"]

[node name="login" type="MarginContainer"]
offset_right = 126.0
offset_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 30
script = ExtResource("1_e8a18")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "ENTER_NAME"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "PW"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "LOGIN"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "REGISTER"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "LANGUAGE"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="error_dialog" parent="." instance=ExtResource("2_8vrmq")]
visible = false

[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LineEdit2" to="." method="_on_line_edit_2_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_login"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_register"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
